--- a/native/android/app/src/main/res/layout/fragment_create_new_account.xml
+++ b/native/android/app/src/main/res/layout/fragment_create_new_account.xml
@@ -5,7 +5,7 @@
   android:layout_height="match_parent">
 
   <Button
-    android:id="@+id/create_account_button"
+    android:id="@+id/createAccountButton"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
@@ -15,12 +15,12 @@
     android:text="@string/create_new_account"
     android:textColor="@android:color/white"
     android:textSize="18sp"
-    app:layout_constraintBottom_toTopOf="@+id/has_account_text"
+    app:layout_constraintBottom_toTopOf="@+id/hasAccountText"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent" />
 
   <TextView
-    android:id="@+id/has_account_text"
+    android:id="@+id/hasAccountText"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginBottom="80dp"
@@ -31,7 +31,7 @@
     app:layout_constraintStart_toStartOf="parent" />
 
   <TextView
-    android:id="@+id/edit_photo_text"
+    android:id="@+id/editPhotoText"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="16dp"
@@ -58,37 +58,37 @@
   <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="0dp"
     android:layout_height="wrap_content"
-    app:layout_constraintBottom_toTopOf="@+id/create_account_button"
+    app:layout_constraintBottom_toTopOf="@+id/createAccountButton"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/edit_photo_text">
+    app:layout_constraintTop_toBottomOf="@+id/editPhotoText">
 
     <EditText
-      android:id="@+id/fullname_editText"
+      android:id="@+id/fullNameEditText"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:ems="10"
       android:hint="@string/name"
       android:inputType="textPersonName"
-      app:layout_constraintEnd_toEndOf="@+id/user_name_editText"
-      app:layout_constraintStart_toStartOf="@+id/user_name_editText"
+      app:layout_constraintEnd_toEndOf="@+id/userNameEditText"
+      app:layout_constraintStart_toStartOf="@+id/userNameEditText"
       app:layout_constraintTop_toTopOf="parent"
       android:autofillHints="" />
 
     <EditText
-      android:id="@+id/pass_editText"
+      android:id="@+id/passEditText"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:ems="10"
       android:hint="@string/password"
       android:inputType="textPassword"
-      app:layout_constraintEnd_toEndOf="@+id/pass_confirm_editText"
-      app:layout_constraintStart_toStartOf="@+id/pass_confirm_editText"
-      app:layout_constraintTop_toBottomOf="@+id/email_editText"
+      app:layout_constraintEnd_toEndOf="@+id/passConfirmEditText"
+      app:layout_constraintStart_toStartOf="@+id/passConfirmEditText"
+      app:layout_constraintTop_toBottomOf="@+id/emailEditText"
       android:autofillHints="" />
 
     <EditText
-      android:id="@+id/pass_confirm_editText"
+      android:id="@+id/passConfirmEditText"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="16dp"
@@ -99,31 +99,31 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/pass_editText"
+      app:layout_constraintTop_toBottomOf="@+id/passEditText"
       android:autofillHints="" />
 
     <EditText
-      android:id="@+id/email_editText"
+      android:id="@+id/emailEditText"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:ems="10"
       android:hint="@string/email"
       android:inputType="textEmailAddress"
-      app:layout_constraintEnd_toEndOf="@+id/pass_editText"
-      app:layout_constraintStart_toStartOf="@+id/pass_editText"
-      app:layout_constraintTop_toBottomOf="@+id/user_name_editText"
+      app:layout_constraintEnd_toEndOf="@+id/passEditText"
+      app:layout_constraintStart_toStartOf="@+id/passEditText"
+      app:layout_constraintTop_toBottomOf="@+id/userNameEditText"
       android:autofillHints="" />
 
     <EditText
-      android:id="@+id/user_name_editText"
+      android:id="@+id/userNameEditText"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:ems="10"
       android:hint="@string/username"
       android:inputType="textPersonName"
-      app:layout_constraintEnd_toEndOf="@+id/email_editText"
-      app:layout_constraintStart_toStartOf="@+id/email_editText"
-      app:layout_constraintTop_toBottomOf="@+id/fullname_editText"
+      app:layout_constraintEnd_toEndOf="@+id/emailEditText"
+      app:layout_constraintStart_toStartOf="@+id/emailEditText"
+      app:layout_constraintTop_toBottomOf="@+id/fullNameEditText"
       android:autofillHints="" />
   </androidx.constraintlayout.widget.ConstraintLayout>
 
