--- a/native/android/app/src/main/res/layout/fragment_login.xml
+++ b/native/android/app/src/main/res/layout/fragment_login.xml
@@ -33,19 +33,7 @@
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintVertical_bias="0.644">
-
-    <View
-      android:id="@+id/view"
-      android:layout_width="250dp"
-      android:layout_height="1dp"
-      android:background="#727474"
-      android:visibility="visible"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.089" />
+    app:layout_constraintVertical_bias="0.64">
 
     <Button
       android:id="@+id/googleSingnin"
@@ -84,44 +72,36 @@
       android:textAlignment="center"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="@+id/googleSingnin"
-      app:layout_constraintHorizontal_bias="0.500"
+      app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="@+id/googleSingnin"
       app:layout_constraintTop_toBottomOf="@+id/twitterSignin"
-      app:layout_constraintVertical_bias="0.052" />
+      app:layout_constraintVertical_bias="0.046" />
 
-    <ImageView
-      android:id="@+id/loginEmaiIcon"
-      android:layout_width="35dp"
-      android:layout_height="35dp"
-      android:layout_marginStart="32dp"
-      android:layout_marginBottom="20dp"
-      android:src="@drawable/mail"
-      app:layout_constraintBottom_toTopOf="@+id/loginPasswordIcon"
+    <Button
+      android:id="@+id/loginButton"
+      android:layout_width="336dp"
+      android:layout_height="51dp"
+      android:layout_marginTop="20dp"
+      android:backgroundTint="#2BACFC"
+      android:fontFamily="sans-serif"
+      android:text="@string/login_button"
+      android:textColor="#FFFFFF"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.492"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/githubSingin"
-      app:layout_constraintVertical_bias="1.0" />
-
-    <ImageView
-      android:id="@+id/loginPasswordIcon"
-      android:layout_width="35dp"
-      android:layout_height="35dp"
-      android:layout_marginStart="32dp"
-      android:layout_marginBottom="196dp"
-      android:src="@drawable/password"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintStart_toStartOf="parent" />
+      app:layout_constraintTop_toBottomOf="@+id/loginPassword"
+      tools:ignore="MissingConstraints" />
 
     <EditText
       android:id="@+id/loginEmail"
-      android:layout_width="286dp"
+      android:layout_width="270dp"
       android:layout_height="47dp"
-      android:layout_marginTop="20dp"
+      android:layout_marginTop="24dp"
+      android:layout_marginEnd="36dp"
       android:ems="10"
       android:hint="Email..."
       android:inputType="textEmailAddress"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.152"
-      app:layout_constraintStart_toEndOf="@+id/loginEmaiIcon"
       app:layout_constraintTop_toBottomOf="@+id/githubSingin" />
 
     <EditText
@@ -134,26 +114,66 @@
       android:hint="Password..."
       android:inputType="textPassword"
       app:layout_constraintEnd_toEndOf="@+id/loginEmail"
-      app:layout_constraintHorizontal_bias="0.152"
+      app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="@+id/loginEmail"
-      app:layout_constraintStart_toEndOf="@+id/loginPasswordIcon"
       app:layout_constraintTop_toBottomOf="@+id/loginEmail"
       tools:ignore="MissingConstraints" />
 
-    <Button
-      android:id="@+id/loginButton"
-      android:layout_width="336dp"
-      android:layout_height="51dp"
-      android:layout_marginTop="16dp"
-      android:backgroundTint="#2BACFC"
-      android:fontFamily="sans-serif"
-      android:text="@string/login_button"
-      android:textColor="#FFFFFF"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.492"
+    <ImageView
+      android:id="@+id/loginGoogleIcon"
+      android:layout_width="28dp"
+      android:layout_height="28dp"
+      android:src="@drawable/ic_google"
+      app:layout_constraintBottom_toBottomOf="@+id/googleSingnin"
+      app:layout_constraintEnd_toStartOf="@+id/googleSigninText"
+      app:layout_constraintStart_toStartOf="@+id/googleSingnin"
+      app:layout_constraintTop_toTopOf="@+id/googleSingnin" />
+
+    <ImageView
+      android:id="@+id/loginTwitterIcon"
+      android:layout_width="28dp"
+      android:layout_height="28dp"
+      android:src="@drawable/ic_twitter"
+      app:layout_constraintBottom_toBottomOf="@+id/twitterSignin"
+      app:layout_constraintEnd_toStartOf="@+id/twitterSigninText"
+      app:layout_constraintStart_toStartOf="@+id/twitterSignin"
+      app:layout_constraintTop_toTopOf="@+id/twitterSignin" />
+
+    <ImageView
+      android:id="@+id/loginGithubIcon"
+      android:layout_width="28dp"
+      android:layout_height="28dp"
+      android:src="@drawable/ic_github"
+      app:layout_constraintBottom_toBottomOf="@+id/githubSingin"
+      app:layout_constraintEnd_toStartOf="@+id/githubSigninText"
+      app:layout_constraintStart_toStartOf="@+id/githubSingin"
+      app:layout_constraintTop_toTopOf="@+id/githubSingin" />
+
+    <ImageView
+      android:id="@+id/loginMailIcon"
+      android:layout_width="30dp"
+      android:layout_height="30dp"
+      android:layout_marginTop="28dp"
+      android:layout_marginBottom="20dp"
+      android:src="@drawable/ic_mail"
+      app:layout_constraintBottom_toTopOf="@+id/loginPasswordIcon"
+      app:layout_constraintEnd_toStartOf="@+id/loginEmail"
+      app:layout_constraintHorizontal_bias="0.74"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/loginPassword"
-      tools:ignore="MissingConstraints" />
+      app:layout_constraintTop_toBottomOf="@+id/githubSingin" />
+
+    <ImageView
+      android:id="@+id/loginPasswordIcon"
+      android:layout_width="30dp"
+      android:layout_height="30dp"
+      android:layout_marginStart="16dp"
+      android:layout_marginBottom="30dp"
+      android:src="@drawable/ic_password"
+      app:layout_constraintBottom_toTopOf="@+id/loginButton"
+      app:layout_constraintEnd_toStartOf="@+id/loginPassword"
+      app:layout_constraintHorizontal_bias="0.631"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/loginMailIcon" />
 
     <TextView
       android:id="@+id/googleSigninText"
@@ -192,37 +212,6 @@
       app:layout_constraintTop_toTopOf="@+id/githubSingin"
       app:layout_constraintVertical_bias="0.421" />
 
-    <ImageView
-      android:id="@+id/googleIcon"
-      android:layout_width="28dp"
-      android:layout_height="28dp"
-      android:src="@drawable/google"
-      app:layout_constraintBottom_toBottomOf="@+id/googleSingnin"
-      app:layout_constraintEnd_toStartOf="@+id/googleSigninText"
-      app:layout_constraintStart_toStartOf="@+id/googleSingnin"
-      app:layout_constraintTop_toTopOf="@+id/googleSingnin" />
-
-    <ImageView
-      android:id="@+id/twitterIcon"
-      android:layout_width="28dp"
-      android:layout_height="28dp"
-      android:src="@drawable/twitter"
-      app:layout_constraintBottom_toBottomOf="@+id/twitterSignin"
-      app:layout_constraintEnd_toStartOf="@+id/twitterSigninText"
-      app:layout_constraintStart_toStartOf="@+id/twitterSignin"
-      app:layout_constraintTop_toTopOf="@+id/twitterSignin" />
-
-    <ImageView
-      android:id="@+id/imageView11"
-      android:layout_width="28dp"
-      android:layout_height="28dp"
-      android:src="@drawable/github"
-      app:layout_constraintBottom_toBottomOf="@+id/githubSingin"
-      app:layout_constraintEnd_toStartOf="@+id/githubSigninText"
-      app:layout_constraintStart_toStartOf="@+id/githubSingin"
-      app:layout_constraintTop_toTopOf="@+id/githubSingin"
-      app:layout_constraintVertical_bias="0.423" />
-
     <TextView
       android:id="@+id/loginNewText"
       android:layout_width="wrap_content"
@@ -244,6 +233,18 @@
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent" />
+
+    <View
+      android:id="@+id/view"
+      android:layout_width="250dp"
+      android:layout_height="1dp"
+      android:background="#727474"
+      android:visibility="visible"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.089" />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
