--- a/native/android/app/src/main/res/layout/fragment_create_new_account.xml
+++ b/native/android/app/src/main/res/layout/fragment_create_new_account.xml
@@ -53,7 +53,7 @@
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
-    app:srcCompat="@android:drawable/ic_menu_camera" />
+    android:src="@android:drawable/ic_menu_camera" />
 
   <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="0dp"
