--- a/native/android/app/src/main/res/layout/fragment_mail_confirmation.xml
+++ b/native/android/app/src/main/res/layout/fragment_mail_confirmation.xml
@@ -41,7 +41,7 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:srcCompat="@android:drawable/ic_dialog_email" />
+      android:src="@android:drawable/ic_dialog_email" />
 
     <TextView
       android:id="@+id/checkMailText"
