--- a/native/android/app/src/main/res/layout/fragment_login.xml
+++ b/native/android/app/src/main/res/layout/fragment_login.xml
@@ -61,7 +61,7 @@
       app:layout_constraintHorizontal_bias="0.500"
       app:layout_constraintStart_toStartOf="@+id/googleSingnin"
       app:layout_constraintTop_toBottomOf="@+id/googleSingnin"
-      app:layout_constraintVertical_bias="0.067" />
+      app:layout_constraintVertical_bias="0.050" />
 
     <Button
       android:id="@+id/githubSingin"
@@ -75,7 +75,7 @@
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="@+id/googleSingnin"
       app:layout_constraintTop_toBottomOf="@+id/twitterSignin"
-      app:layout_constraintVertical_bias="0.046" />
+      app:layout_constraintVertical_bias="0.050" />
 
     <Button
       android:id="@+id/loginButton"
@@ -99,7 +99,7 @@
       android:layout_marginTop="24dp"
       android:layout_marginEnd="36dp"
       android:ems="10"
-      android:hint="Email..."
+      android:hint="Email"
       android:inputType="textEmailAddress"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/githubSingin" />
@@ -111,7 +111,7 @@
       android:layout_marginTop="8dp"
       android:autofillHints=""
       android:ems="10"
-      android:hint="Password..."
+      android:hint="Password"
       android:inputType="textPassword"
       app:layout_constraintEnd_toEndOf="@+id/loginEmail"
       app:layout_constraintHorizontal_bias="0.0"
