--- a/native/android/app/src/main/res/values/styles.xml
+++ b/native/android/app/src/main/res/values/styles.xml
@@ -8,4 +8,21 @@
     <item name="colorAccent">@color/colorAccent</item>
   </style>
 
+  <style name="notificationSettingLists">
+    <item name="android:layout_width">0dp</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:layout_marginTop">@dimen/margin_normal</item>
+    <item name="android:paddingHorizontal">@dimen/margin_normal</item>
+    <item name="android:textSize">18sp</item>
+  </style>
+  <style name="notificationTitle">
+    <item name="android:layout_width">0dp</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:paddingHorizontal">@dimen/margin_normal</item>
+    <item name="android:textSize">18sp</item>
+    <item name="android:textStyle">bold</item>
+    <item name="android:background">#33000000</item>
+    <item name="android:textColor">@color/design_default_color_on_secondary</item>
+  </style>
+
 </resources>
