--- a/native/android/app/src/main/res/layout/fragment_create_new_account.xml
+++ b/native/android/app/src/main/res/layout/fragment_create_new_account.xml
@@ -39,10 +39,10 @@
     android:textSize="12sp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/imageView" />
+    app:layout_constraintTop_toBottomOf="@+id/thumbnail" />
 
   <ImageView
-    android:id="@+id/imageView"
+    android:id="@+id/thumbnail"
     android:layout_width="94dp"
     android:layout_height="81dp"
     android:layout_marginTop="100dp"
