--- a/native/android/app/src/main/res/navigation/navigation.xml
+++ b/native/android/app/src/main/res/navigation/navigation.xml
@@ -12,7 +12,11 @@
     tools:layout="@layout/fragment_login" >
     <action
       android:id="@+id/action_loginFragment_to_newAccountFragment"
-      app:destination="@+id/new_account_fragment" />
+      app:destination="@+id/new_account_fragment"
+      />
+    <action
+      android:id="@+id/action_login_fragment_to_home_fragment"
+      app:destination="@id/home_fragment" />
   </fragment>
   <fragment
     android:id="@+id/new_account_fragment"
@@ -21,4 +25,14 @@
     tools:layout="@layout/fragment_new_account">
 
   </fragment>
+    <fragment
+    android:id="@+id/home_fragment"
+    android:name="work.calmato.prestopay.ui.home.HomeFragment"
+    android:label="fragment_home"
+    tools:layout="@layout/fragment_home">
+
+  </fragment>
+
+
+
 </navigation>
