--- a/native/android/app/src/main/res/values/colors.xml
+++ b/native/android/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
   <color name="colorPrimaryDark">#3700B3</color>
   <color name="colorAccent">#03DAC5</color>
   <color name="ourTheme">#2BACFC</color>
+
+  <color name="clearButtonPressed">#868585</color>
 </resources>
