--- a/native/android/app/src/main/res/layout/fragment_account_home.xml
+++ b/native/android/app/src/main/res/layout/fragment_account_home.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
+  xmlns:tools="http://schemas.android.com/tools">
+<androidx.constraintlayout.widget.ConstraintLayout
   android:layout_width="match_parent"
   android:layout_height="match_parent">
 
-  <ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+
 
     <ImageView
       android:id="@+id/UserAccountThumnail"
@@ -293,6 +292,7 @@
       app:layout_constraintBottom_toBottomOf="@+id/displayInviteButton"
       app:layout_constraintStart_toStartOf="@+id/helpText"
       app:layout_constraintTop_toBottomOf="@+id/horizonBar6" />
-  </ScrollView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
