--- a/native/android/app/src/main/res/layout/fragment_acount_set.xml
+++ b/native/android/app/src/main/res/layout/fragment_acount_set.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -81,4 +82,5 @@
     app:layout_constraintEnd_toEndOf="@+id/mailEditText"
     app:layout_constraintStart_toStartOf="@+id/mailEditText"
     app:layout_constraintTop_toBottomOf="@+id/mailEditText" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
