--- a/native/android/app/src/main/res/layout/fragment_home.xml
+++ b/native/android/app/src/main/res/layout/fragment_home.xml
@@ -6,10 +6,10 @@
   <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#2BACFC"
     tools:context=".MainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+      android:id="@+id/constraintLayout3"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
 
@@ -56,6 +56,7 @@
       </androidx.constraintlayout.widget.ConstraintLayout>
 
       <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
@@ -64,10 +65,41 @@
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nestedAmount" />
+        app:layout_constraintTop_toBottomOf="@+id/nestedAmount"
+        app:layout_constraintVertical_bias="1.0" />
+
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+               android:id="@+id/bottom_navigation"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:layout_alignParentBottom="true"
+               app:layout_constraintBottom_toBottomOf="parent"
+              android:background="@color/ourTheme"
+               app:menu="@menu/fooder"/>
+
+      <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:scaleType="center"
+        android:clickable="true"
+        android:src="@drawable/ic_add_footer"
+        android:backgroundTint="@android:color/background_light"
+        app:borderWidth="5dp"
+        app:backgroundTint="@color/ourTheme"
+        app:elevation="10dp"
+        app:maxImageSize="60dp"
+        app:fabCustomSize="80dp"
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/bottom_navigation"
+        app:layout_constraintTop_toTopOf="@id/bottom_navigation" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
-    <!-- TODO 検索バーの作成-->
-    <!-- TODO フッターをつける-->
   </androidx.constraintlayout.widget.ConstraintLayout>
+  <!-- TODO 検索バーの作成-->
+
 </layout>
