--- a/native/android/app/src/main/res/navigation/navigation.xml
+++ b/native/android/app/src/main/res/navigation/navigation.xml
@@ -3,7 +3,7 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/navigation"
-  app:startDestination="@id/account_home">
+  app:startDestination="@id/login_fragment">
 
   <fragment
     android:id="@+id/login_fragment"
@@ -41,14 +41,19 @@
     android:name="work.calmato.prestopay.ui.home.HomeFragment"
     android:label="fragment_home"
     tools:layout="@layout/fragment_home">
-
-  </fragment>
+      <action
+        android:id="@+id/action_home_fragment_to_account_home"
+        app:destination="@id/account_home" />
+    </fragment>
   <fragment
     android:id="@+id/account_home"
     android:name="work.calmato.prestopay.ui.accountHome.AccountHomeFragment"
     android:label="fragment_account_home"
     tools:layout="@layout/fragment_account_home">
 
+    <action
+      android:id="@+id/action_account_home_to_login_fragment"
+      app:destination="@id/login_fragment" />
   </fragment>
 
 
