グループ作成画面の作成

--- a/native/android/app/src/main/res/layout/fragment_acount_set.xml
+++ b/native/android/app/src/main/res/layout/fragment_acount_set.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
   <ImageView
-    android:id="@+id/profilePhoto"
+    android:id="@+id/thumbnail"
     android:layout_width="83dp"
     android:layout_height="85dp"
     android:layout_marginTop="64dp"
@@ -29,9 +29,9 @@
     android:text="@string/change_profile_photo"
     android:textColor="@color/ourTheme"
     android:textSize="12sp"
-    app:layout_constraintEnd_toEndOf="@+id/profilePhoto"
-    app:layout_constraintStart_toStartOf="@+id/profilePhoto"
-    app:layout_constraintTop_toBottomOf="@+id/profilePhoto" />
+    app:layout_constraintEnd_toEndOf="@+id/thumbnail"
+    app:layout_constraintStart_toStartOf="@+id/thumbnail"
+    app:layout_constraintTop_toBottomOf="@+id/thumbnail" />
 
   <EditText
     android:id="@+id/nameEditText"
